# kyopro-workspace

./: .clang-format  .gitignore  .gitmodules  .rtx.toml  Makefile  kpr.toml  pyproject.toml  pyrightconfig.json
include/: armkn
include/bits/: stdc++.h
scripts/: gen_cpp_compile_flags.sh
template/: Makefile  main.cpp  main.py
